--- a/src/index.css
+++ b/src/index.css
@@ -113,3 +113,19 @@ label.up {
   justify-content: center;
   align-items: center;
 }
+
+.btn-neutral {
+  cursor: pointer;
+  background-color: #ffffff;
+  color: rgb(75 85 99);
+  transition: 0.2s;
+}
+
+.btn-neutral:hover {
+  background-color: #f3f4f6;
+}
+
+.btn-neutral:active {
+  opacity: 0.8;
+  transition: 0s;
+}
