--- a/src/index.css
+++ b/src/index.css
@@ -223,7 +223,7 @@ label.up {
 .btn-neutral:active {
   opacity: 0.8;
   transition: 0s;
-
+}
 .animate-slide>div {
   animation: slide 1.6s ease-in-out infinite;
 }
@@ -341,4 +341,36 @@ label.up {
   background-color: #ffffff;
   pointer-events: none;
   clip-path: polygon(46% 57%, 70% 20%, 84% 30%, 52% 79%, 42% 79%, 19% 58%, 31% 43%);
+}
+
+input[type="checkbox"].switch {
+  position: relative;
+  width: 45px;
+  height: 24px;
+  -webkit-appearance: none;
+  background: #f3f4f6;
+  outline: none;
+  border-radius: 34px;
+  box-shadow: inset 0 0 1.5px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+input[type="checkbox"].switch::after {
+  content: '';
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  top: 4px;
+  left: 5px;
+  background: #9ca3af;
+  box-shadow: 0 0 1.5px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+}
+
+input[type="checkbox"].switch:checked::after {
+  background: #047857;
+  left: 24px;
+
 }
