--- a/src/index.css
+++ b/src/index.css
@@ -174,7 +174,7 @@ label.up {
 .btn-emerald:disabled {
   background-color: #0c7356;
   opacity: 0.7;
-  cursor: progress;
+  cursor: default;
 }
 
 .btn-trash {
