--- a/src/index.css
+++ b/src/index.css
@@ -224,6 +224,7 @@ label.up {
   opacity: 0.8;
   transition: 0s;
 }
+
 .animate-slide>div {
   animation: slide 1.6s ease-in-out infinite;
 }
@@ -341,6 +342,18 @@ label.up {
   background-color: #ffffff;
   pointer-events: none;
   clip-path: polygon(46% 57%, 70% 20%, 84% 30%, 52% 79%, 42% 79%, 19% 58%, 31% 43%);
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 input[type="checkbox"].switch {
